<resources>
    <string name="app_name">BMB</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña\n</string>
    <string name="enter">Ingresar</string>
    <string name="signUp">Registrate</string>
    <string name="optionLogin">Si no estas registrado</string>
    <string name="tvSesion">Mantener sesión iniciada</string>
    <string name="logo">Logo</string>
    <string name="confirm">Confirmar contraseña</string>
    <string name="userName">Nombre de usuario</string>
    <string name="login">Inicia Sesión</string>
    <string name="register">Registrar</string>
    <string name="default_web_client_id" translatable="false">116876997506600641039--</string>
    <string name="google">Google</string>
    <string name="msgReg1">También puedes iniciar sesión con</string>
    <string name="msgReg1_v">También puedes registrarte con</string>
    <string name="msgReg2_r">Si ya estas registrado Inicia Sesion</string>
    <string name="forgotPass">¿Olvidaste tu contraseña?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>