<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTopDataUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="75dp"
                    app:layout_constraintEnd_toStartOf="@id/tvUserName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivPhoto"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_user_photo" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp"
                    app:fontFamily="@font/product_sans_black"
                    app:layout_constraintBottom_toBottomOf="@id/cvImage"
                    app:layout_constraintStart_toEndOf="@id/cvImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btnUserSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/none"
                    android:src="@drawable/ic_settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPostUser"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="@dimen/medium"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:carousel_alignment="center"
                    app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/cvImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clEditUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/xLarge"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="?attr/colorOutline">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/llImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/small"
                            app:cardCornerRadius="@dimen/none"
                            app:strokeColor="?attr/colorOutline">

                            <ImageView
                                android:id="@+id/ivNewPhoto"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:layout_gravity="center"
                                android:elevation="@dimen/xSmall"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_user_photo" />

                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnPhoto"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Selecciona una imagen" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:hint="@string/userName"
                    app:layout_constraintTop_toBottomOf="@id/cvPhoto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xSmall"
                    android:enabled="false"
                    android:hint="@string/email"
                    app:layout_constraintTop_toBottomOf="@id/tilUserName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnShow"
                    style="@style/ThemeOverlay.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:text="Mostrar"
                    android:textAlignment="textStart"
                    app:backgroundTint="@color/none"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilEmail" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xSmall"
                    android:enabled="false"
                    android:hint="Contraseña actual"
                    android:visibility="gone"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/btnShow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xSmall"
                    android:enabled="false"
                    android:hint="Nueva contraseña"
                    android:visibility="gone"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/tilPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xSmall"
                    android:enabled="false"
                    android:hint="@string/confirm"
                    android:visibility="gone"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/tilNewPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/small"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSave"
                    style="@style/ThemeOverlay.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:text="Guardar"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    app:backgroundTint="@color/none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilConfirm" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>